update geral, agora aceita comandos no cmd para interagir com interface do usuario